fix: displaying more or less OK  countdown clock in diferent devices using duck tape and wire recipe (manually positioning in a place of the document that is visible for mobile and desktop devices, I HOPE!)

--- a/presentation/web/assets/css/less/main.less
+++ b/presentation/web/assets/css/less/main.less
@@ -1226,7 +1226,6 @@ dialog {
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 0px;
-  position: fixed;
   text-size-adjust: 100%;
   unicode-bidi: isolate;
   width: 80px;
